@@ -17,7 +17,8 @@
 	X(topic) \
 	X(ircv3_cap) \
 	X(ircv3_account) \
-	X(ircv3_away)
+	X(ircv3_away) \
+	X(ircv3_chghost)
 
 #define X(cmd) static int recv_##cmd(struct server*, struct irc_message*);
 RECV_HANDLERS
@@ -59,4 +60,5 @@ TOPIC,   recv_topic
 CAP,     recv_ircv3_cap
 ACCOUNT, recv_ircv3_account
 AWAY,    recv_ircv3_away
+CHGHOST, recv_ircv3_chghost
 %%
